racketinterpreter/grammar.txt
PARSER
======

data: NUMBER
    | BOOLEAN
    | STRING

p-expr: LPAREN expr* RPAREN

cond-else: p-expr

cond-branch: p-expr

cond: LPAREN COND (cond-branch|data|ID|cond)* cond-else? RPAREN

expr: data
    | p-expr
    | ID
    | cond

constant_assignment: LPAREN DEFINE expr* RPAREN

procedure_assignment: LPAREN DEFINE LPAREN expr* RPAREN expr* RPAREN

structure_assignment: LPAREN DEFINE_STRUCT LPAREN expr* RPAREN RPAREN

assignment_statement: constant_assignment
                    | function_assignment
                    | structure_assignment

check_expect: LPAREN CHECK_EXPECT expr* RPAREN

statement: assignment_statement
         | expr

program : statement
        | statement program
